--- a/roles/jenkins/tasks/folders.yml
+++ b/roles/jenkins/tasks/folders.yml
@@ -6,7 +6,7 @@
 - name: Create a jenkins job using basic authentication
   community.general.jenkins_job:
      config: "{{ lookup('file', '/tmp/folder.xml') }}"
-     name: {{ item.folder_name }}
+     name: "{{ item.folder_name }}"
      password: admin123
      url: http://localhost:8080
      user: admin
