Jenkins "pipeline Script"

--- a/roles/jenkins/tasks/folders.yml
+++ b/roles/jenkins/tasks/folders.yml
@@ -3,7 +3,7 @@
      src: folder.xml
      dest: /tmp/folder.xml
 
-- name: Create a jenkins job using basic authentication
+- name: Create folder - {{ item.folder_name }}
   community.general.jenkins_job:
      config: "{{ lookup('file', '/tmp/folder.xml') }}"
      name: "{{ item.folder_name }}"
