Jenkins "pipeline Script"

--- a/roles/jenkins/tasks/folders.yml
+++ b/roles/jenkins/tasks/folders.yml
@@ -1,9 +1,9 @@
-- name: copy config file - {{ item.folder_name }}
+- name: copy config file - "{{ item.folder_name }}"
   ansible.builtin.template:
      src: folder.xml
      dest: /tmp/folder.xml
 
-- name: Create folder - {{ item.folder_name }}
+- name: Create folder - "{{ item.folder_name }}"
   community.general.jenkins_job:
      config: "{{ lookup('file', '/tmp/folder.xml') }}"
      name: "{{ item.folder_name }}"
