Jenkins "pipeline Script"

--- a/jenkins-jobs.yml
+++ b/jenkins-jobs.yml
@@ -11,5 +11,5 @@
 
   vars:
      folders:
-        - { folder_name = "CI-Pipelines" }
-        - { folder_name = "Deployment jobs" }
+        - { folder_name: "CI-Pipelines" }
+        - { folder_name: "Deployment jobs" }
