--- a/jenkins-jobs.yml
+++ b/jenkins-jobs.yml
@@ -14,3 +14,7 @@
      mjobs:
         - { job_name: "cart" , repo_name: "https://github.com/hemanthtadikonda/cart-v1.git" , folder_name: "CI-Pipelines"}
         - { job_name: "user" , repo_name: "https://github.com/hemanthtadikonda/user-v1.git" , folder_name: "CI-Pipelines"}
+        - { job_name: "catalogue" , repo_name: "https://github.com/hemanthtadikonda/catalogue-v1.git" , folder_name: "CI-Pipelines"}
+        - { job_name: "frontend" , repo_name: "https://github.com/hemanthtadikonda/frontend-v1.git" , folder_name: "CI-Pipelines"}
+        - { job_name: "shipping" , repo_name: "https://github.com/hemanthtadikonda/shipping.git" , folder_name: "CI-Pipelines"}
+        - { job_name: "payment" , repo_name: "https://github.com/hemanthtadikonda/payment-v1.git" , folder_name: "CI-Pipelines"}
